--- a/cv.qmd
+++ b/cv.qmd
@@ -3,10 +3,10 @@ title: "Curriculum Vitae"
 page-layout: article
 ---
 
-
 <iframe src="assets/CV/cv.pdf" width="100%" height="800px" style="border: none;">
-  Your browser doesn't support PDF embedding.
-  <a href="assets/CV/cv.pdf">Download the CV instead</a>.
+
+Your browser doesn't support PDF embedding. <a href="assets/CV/cv.pdf">Download the CV instead</a>.
+
 </iframe>
 
----
+------------------------------------------------------------------------
