--- a/index.qmd
+++ b/index.qmd
@@ -20,23 +20,23 @@ resources:
   - assets/index.css
 ---
 
+```{=html}
 <style>
 .add-space{
 padding-right: 15%;
 }
 </style>
-
+```
 <br><br>
 
-::: {.column width="55%" .add-space}
+::: {.column .add-space width="55%"}
 I am a **data science major** at **Northwestern University**, originally from **Mauritius**. In 2023 I earned a full scholarship from the Mauritian government as the top‑ranked STEM student nationally. My academic interests span large language models, machine learning, and sports analytics. I aim to harness data‑driven insights to solve real‑world problems and to inspire others through teaching and community engagement.
 
-[Learn more about me &rarr;](/about.qmd){.about-links .subtitle}
+[Learn more about me →](/about.qmd){.about-links .subtitle}
 :::
 
 ::: {.column width="40%"}
 ![Hans Kuthy](assets/homepic.jpg){alt="Hans Kuthy - Data Science Student"}
 :::
 
-<!-- hero-heading -->
----
+## <!-- hero-heading -->
