--- a/portfolio.qmd
+++ b/portfolio.qmd
@@ -2,44 +2,29 @@
 title: "Portfolio"
 ---
 
-## Latest Projects...
+## Latest Projects…
 
-::: grid
-::: g-col-3
+:::: {.grid}
+
+::: {.g-col-3}
 #### Soccer Tracking & xG Modeling
-
-::: {#soccer-tracking}
+[Learn more →](proj/proj1.qmd){.about-links .subtitle}
 :::
 
-[Learn more →](/proj1){.about-links .subtitle}
-:::
-
-::: g-col-3
+::: {.g-col-3}
 #### Product Design: Smart Nightstand
-
-::: {#sports-design}
+[Learn more →](proj/proj2.qmd){.about-links .subtitle}
 :::
 
-[Learn more →](/proj2){.about-links .subtitle}
-:::
-
-::: g-col-3
+::: {.g-col-3}
 #### Kreol Morisyen: Language & Identity
-
-::: {#kreol-research}
+[Learn more →]proj/(proj3.qmd){.about-links .subtitle}
 :::
 
-[Learn more →](/proj3){.about-links .subtitle}
-:::
-
-::: g-col-3
+::: {.g-col-3}
 #### Pirates in Mauritius: History & Archives
-
-::: {#pirates}
+[Learn more →](proj/proj4.qmd){.about-links .subtitle}
 :::
 
-[Learn more →](/proj4){.about-links .subtitle}
-:::
-:::
-
-------------------------------------------------------------------------
+::::
+---
