--- a/portfolio.qmd
+++ b/portfolio.qmd
@@ -18,7 +18,7 @@ title: "Portfolio"
 
 ::: {.g-col-3}
 #### Kreol Morisyen: Language & Identity
-[Learn more →]proj/(proj3.qmd){.about-links .subtitle}
+[Learn more →](proj/proj3.qmd){.about-links .subtitle}
 :::
 
 ::: {.g-col-3}
